--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         height: 100%;
       }
       body {
-        height: calc(100% - 50px);
+        /* height: calc(100% - 50px); */
       }
     </style>
   </head>
